WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95772
CSS 2.1 failure: floats-149 fails
https://bugs.webkit.org/show_bug.cgi?id=95772
Summary
CSS 2.1 failure: floats-149 fails
Robert Hogan
Reported
2012-09-04 12:39:31 PDT
Should the RenderInline expand to enclose the float? It currently gets a zero height - which is why the RenderBlock parent gets a zero height.
Attachments
Patch
(9.73 KB, patch)
2013-01-27 07:19 PST
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
Patch
(9.81 KB, patch)
2013-01-28 11:06 PST
,
Robert Hogan
hyatt
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2012-09-04 12:58:56 PDT
Just a guess but: static bool alwaysRequiresLineBox(RenderInline* flow) { // FIXME: Right now, we only allow line boxes for inlines that are truly empty. // We need to fix this, though, because at the very least, inlines containing only // ignorable whitespace should should also have line boxes. return !flow->firstChild() && flow->hasInlineDirectionBordersPaddingOrMargin(); } I think !flow->firstChild() (the subject of the FIXME) is probably why we're failing this test. You should replace that with a function that recurs and looks for whether or not you have child content that will force the creation of a line box.
Robert Hogan
Comment 2
2012-09-24 11:09:57 PDT
This test can be at least partly reduced to the fact that the inline div will get a line box in this case: <div><div style="display:inline"></div></div> But not in this: <div><div style="display:inline"><span></span></div></div> FF, Opera and IE create a line box for the latter case. So presumably WebKit should too. But then WebKit would always create a line box for empty lines. Is that what should happen?
Robert Hogan
Comment 3
2013-01-27 07:19:55 PST
Created
attachment 184913
[details]
Patch
Build Bot
Comment 4
2013-01-27 07:59:29 PST
Comment on
attachment 184913
[details]
Patch
Attachment 184913
[details]
did not pass win-ews (win): Output:
http://queues.webkit.org/results/16155267
Build Bot
Comment 5
2013-01-27 10:33:36 PST
Comment on
attachment 184913
[details]
Patch
Attachment 184913
[details]
did not pass mac-ews (mac): Output:
http://queues.webkit.org/results/16155308
New failing tests: fast/text/international/bidi-ignored-for-first-child-inline.html
Build Bot
Comment 6
2013-01-27 11:07:15 PST
Comment on
attachment 184913
[details]
Patch
Attachment 184913
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://queues.webkit.org/results/16146538
New failing tests: http/tests/inspector/resource-tree/resource-request-content-while-loading.html fast/text/international/bidi-ignored-for-first-child-inline.html
Robert Hogan
Comment 7
2013-01-28 11:06:36 PST
Created
attachment 185011
[details]
Patch
Build Bot
Comment 8
2013-01-28 16:51:04 PST
Comment on
attachment 185011
[details]
Patch
Attachment 185011
[details]
did not pass mac-ews (mac): Output:
http://queues.webkit.org/results/16180278
New failing tests: fast/text/international/bidi-ignored-for-first-child-inline.html
Build Bot
Comment 9
2013-01-28 22:58:32 PST
Comment on
attachment 185011
[details]
Patch
Attachment 185011
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://queues.webkit.org/results/16191013
New failing tests: fast/text/international/bidi-ignored-for-first-child-inline.html
Dave Hyatt
Comment 10
2013-02-04 14:09:32 PST
Comment on
attachment 185011
[details]
Patch r=me
Robert Hogan
Comment 11
2013-02-07 10:50:29 PST
Committed
r142152
: <
http://trac.webkit.org/changeset/142152
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug