CSS 2.1 failure: floats-149 fails https://bugs.webkit.org/show_bug.cgi?id=95772

Reviewed by David Hyatt.

Source/WebCore:

Treat inlines that contain nothing but empty inlines as empty too so that they get a linebox.

Tests: fast/inline/inline-with-empty-inline-children.html
       css2.1/20110323/floats-149.htm

* rendering/InlineIterator.h:
(WebCore::isEmptyInline):
* rendering/RenderBlockLineLayout.cpp:
(WebCore::RenderBlock::layoutRunsAndFloatsInRange): Now that empty inlines get a linebox any out-of-flow
objects inside an empty inline (on a line that is otherwise empty) won't get positioned while skipping
through leading whitespace.

LayoutTests:

* css2.1/20110323/floats-149-expected.html: Added.
* css2.1/20110323/floats-149.htm: Added.
* fast/inline/inline-with-empty-inline-children-expected.txt: Added.
* fast/inline/inline-with-empty-inline-children.html: Added.
* platform/chromium-win/fast/text/international/bidi-ignored-for-first-child-inline-expected.txt:

Canonical link: https://commits.webkit.org/127397@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142152 268f45cc-cd09-0410-ab3c-d52691b4dbfc